Adding preloading script

--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
     </head>
     <body>
         <h1>Hello it's hephzi!!! So it is!</h1>
+        <p id="info"></p>
     </body>
+    <!-- Attaching renderer script here -->
+    <script src="./renderer.js"></script>
 </html>
